升级音色分离转录模型

--- a/data/musicnet/make_musicnet.ipynb
+++ b/data/musicnet/make_musicnet.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "71422a44",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2e3373a0",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f633b475",
    "metadata": {},
    "outputs": [],
@@ -167,23 +167,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6d8d0f67",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total wav files: 12756\n",
-      "Min length: 230400\n",
-      "Max length: 230400\n",
-      "Mean length: 230400.0\n",
-      "Std length: 0.0\n",
-      "All lengths equal: True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import soundfile as sf\n",
     "\n",
@@ -205,22 +192,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "01cade8d",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'temp'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# 获取temp文件夹下所有.wav文件，确定总数n\u001b[39;00m\n\u001b[32m      5\u001b[39m temp_dir = \u001b[33m\"\u001b[39m\u001b[33mtemp\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m wav_files = [f \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtemp_dir\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mif\u001b[39;00m f.endswith(\u001b[33m\"\u001b[39m\u001b[33m.wav\u001b[39m\u001b[33m\"\u001b[39m)]\n\u001b[32m      7\u001b[39m n = \u001b[38;5;28mlen\u001b[39m(wav_files)\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(n)\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: 'temp'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import shutil\n",
@@ -253,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d0c805a5",
    "metadata": {},
    "outputs": [],
@@ -262,6 +237,50 @@
     "\n",
     "# 删除 temp 文件夹及其所有内容\n",
     "shutil.rmtree(\"temp\", ignore_errors=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e33e02e",
+   "metadata": {},
+   "source": [
+    "# 统计混合情况"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "875c27e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({1: 5571, 3: 2451, 4: 1696, 2: 1161, 5: 643, 8: 75})\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import os\n",
+    "from collections import Counter\n",
+    "\n",
+    "def getInstrumentNumber(midiarray_path):\n",
+    "    midiarr = np.load(midiarray_path)  # midiarr: (track, notes, time)\n",
+    "    return midiarr.shape[0]\n",
+    "\n",
+    "train_folder = \"./train\"\n",
+    "train_files = [f for f in os.listdir(train_folder) if f.endswith(\".npy\")]\n",
+    "instrument_counts = []\n",
+    "for f in train_files:\n",
+    "    path = os.path.join(train_folder, f)\n",
+    "    count = getInstrumentNumber(path)\n",
+    "    instrument_counts.append(count)\n",
+    "\n",
+    "from collections import Counter\n",
+    "count_stats = Counter(instrument_counts)\n",
+    "print(count_stats)"
    ]
   }
  ],
