--- a/evaluate/eval_basicamt.ipynb
+++ b/evaluate/eval_basicamt.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "model_folder_name = \"basicamt\"\n",
     "sys.path.append(f'../{model_folder_name}')\n",
-    "model = torch.load(f\"../{model_folder_name}/basicamt_model.pth\", weights_only=False)\n",
+    "model = torch.load(f\"../{model_folder_name}/best_basicamt_model.pth\", weights_only=False)\n",
     "model.eval()"
    ]
   },
@@ -179,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timbreamt (3.12.12)",
+   "display_name": "timbreamt",
    "language": "python",
    "name": "python3"
   },
