--- a/septimbre/use_model.ipynb
+++ b/septimbre/use_model.ipynb
@@ -9,7 +9,7 @@
     "import torch\n",
     "import sys\n",
     "sys.path.append(\"../model\")\n",
-    "model = torch.load(\"cluster_model_1.pth\", map_location=torch.device('cpu'))\n",
+    "model = torch.load(\"sepamt_model.pth\", map_location=torch.device('cpu'), weights_only=False)\n",
     "s_per_frame = 256 / 22050"
    ]
   },
@@ -82,11 +82,14 @@
     "import os\n",
     "\n",
     "# test_wave_path = \"../data/inferMusic/short mix.wav\"\n",
-    "test_wave_path = \"../data/inferMusic/three_mix.wav\"\n",
+    "# test_wave_path = \"../data/inferMusic/three_mix.wav\"\n",
+    "test_wave_path = \"../data/inferMusic/flute_violin_piano.wav\"\n",
+    "# test_wave_path = \"../data/inferMusic/flute_guitar_Humoresque.wav\"\n",
+    "# test_wave_path = \"../data/inferMusic/flute_violin.wav\"\n",
     "# test_wave_path = \"../data/inferMusic/孤独な巡礼simple.wav\"\n",
     "\n",
     "# 尝试获取midi\n",
-    "test_midi = test_wave_path.replace(\".wav\", \".mid\")\n",
+    "test_midi = os.path.splitext(test_wave_path)[0] + \".mid\"\n",
     "if os.path.exists(test_midi):\n",
     "    test_midi = midi2numpy(test_midi, s_per_frame, track_separate=True)\n",
     "else:\n",
@@ -103,7 +106,7 @@
     "\n",
     "model.eval()\n",
     "with torch.no_grad():\n",
-    "    emb, mask, onset = model(waveform)\n",
+    "    onset, mask, emb = model(waveform)\n",
     "    emb = emb / torch.sqrt(emb.pow(2).sum(dim=1, keepdim=True) + 1e-8)\n",
     "    emb = emb.cpu().numpy()[0]      # (18, 84, frame)\n",
     "    mask = mask.cpu().numpy()[0]    # (84, frame)\n",
@@ -137,7 +140,7 @@
     "N = 3 if test_midi is None else len(test_midi)  # 聚类数目\n",
     "\n",
     "# mask大于阈值的数目记为n\n",
-    "positions = np.where(mask > 0.55)\n",
+    "positions = np.where(mask > 0.5)\n",
     "emb_extracted = emb[:, positions[0], positions[1]].T        # (n, 18)\n",
     "\n",
     "# 计算余弦相似度矩阵\n",
@@ -206,22 +209,26 @@
     "\n",
     "note_events = output_to_notes_polyphonic(\n",
     "    mask, onset,\n",
-    "    frame_thresh = 0.14,\n",
+    "    frame_thresh = 0.3,\n",
     "    onset_thresh = 0.4,\n",
     "    neighbor_trick = False,\n",
-    "    midi_offset = 0\n",
+    "    midi_offset = 0 # 为了提取对应位置，不做偏移\n",
     ")\n",
     "\n",
     "embeddings = []\n",
     "for start, end, f, amp in note_events:\n",
     "    _mask = mask[f, start:end]  # (end-start, )\n",
     "    _emb = emb[:, f, start:end] # (18, end-start)\n",
-    "    weight = _mask * _mask\n",
-    "    # weight = np.exp(_mask * _mask)    # 用softmax，稍微强调一下最强的 发现用平方比用一次方好\n",
+    "    # weight = np.ones_like(_mask)\n",
+    "    weight = _mask\n",
+    "    # weight = _mask * _mask  # 发现用平方比用一次方好\n",
+    "    # weight = np.sqrt(_mask)\n",
+    "    # weight = np.exp(_mask * _mask)    # 用softmax，稍微强调一下最强的\n",
     "    weighted_emb = (_emb * weight).sum(axis=1)  # (18, )\n",
     "    normalized_emb = weighted_emb / np.linalg.norm(weighted_emb)\n",
     "    embeddings.append(normalized_emb)\n",
     "\n",
+    "# N = 2\n",
     "N = 3 if test_midi is None else len(test_midi)  # 聚类数目\n",
     "\n",
     "similarity_matrix = cosine_similarity(embeddings)\n",
@@ -267,6 +274,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 输出为midi\n",
+    "# 根据 labels 将 note_events 分为 N 类\n",
+    "note_classes = [[] for _ in range(N)]\n",
+    "for idx, label in enumerate(labels):\n",
+    "    # 将音高加上24\n",
+    "    start, end, pitch, amp = note_events[idx]\n",
+    "    note_classes[label].append((start, end, pitch + 24, amp))\n",
+    "\n",
+    "from utils.midiarray import notes2midi, midi_merge\n",
+    "midis = [notes2midi(note_class) for note_class in note_classes]\n",
+    "midi_merge(midis).save(\"../test/clustered_output.mid\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -279,23 +305,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 找到 mask 中最大值的位置\n",
-    "max_position = np.unravel_index(np.argmax(mask, axis=None), mask.shape)\n",
-    "# 提取对应的 emb 值\n",
-    "max_emb = emb[:, max_position[0], max_position[1]]\n",
+    "frame_threshold = 0.2\n",
     "\n",
-    "similarity_scores = np.tensordot(max_emb, emb*mask, axes=([0], [0])).reshape(emb.shape[1], emb.shape[2])\n",
+    "def iterate_filter(mask, emb, threshold=0.):\n",
+    "    # 找到 mask 中最大值的位置\n",
+    "    max_position = np.unravel_index(np.argmax(mask, axis=None), mask.shape)\n",
+    "    # 提取对应的 emb 值\n",
+    "    max_emb = emb[:, max_position[0], max_position[1]]\n",
     "\n",
-    "plt.figure(figsize=(12, 10))\n",
-    "plt.subplot(2, 1, 1)\n",
+    "    similarity_scores = np.tensordot(max_emb, emb*mask, axes=([0], [0])).reshape(emb.shape[1], emb.shape[2])\n",
+    "\n",
+    "    mask2 = mask - similarity_scores\n",
+    "    # clip to avoid ramaining classes getting close\n",
+    "    similarity_scores_clipped = np.where(similarity_scores > threshold, similarity_scores, 0)\n",
+    "    emb2 = emb - similarity_scores_clipped * max_emb[:, None, None]\n",
+    "    emb2 = emb2 / (np.linalg.norm(emb2, axis=0, keepdims=True) + 1e-6)\n",
+    "    return similarity_scores, mask2, emb2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "similarity_scores1, mask1, emb1 = iterate_filter(mask, emb, frame_threshold)\n",
+    "\n",
+    "plt.figure(figsize=(12, 15))\n",
+    "plt.subplot(3, 1, 1)\n",
     "plt.title('class_max')\n",
-    "plt.imshow(similarity_scores, aspect='auto', origin='lower', cmap='gray')\n",
+    "plt.imshow(similarity_scores1, aspect='auto', origin='lower', cmap='gray')\n",
     "plt.colorbar()\n",
     "\n",
-    "plt.subplot(2, 1, 2)\n",
-    "plt.imshow(similarity_scores > 0.5, aspect='auto', origin='lower', cmap='gray')\n",
+    "plt.subplot(3, 1, 2)\n",
+    "plt.imshow(similarity_scores1 > frame_threshold, aspect='auto', origin='lower', cmap='gray')\n",
     "plt.colorbar()\n",
     "\n",
+    "plt.subplot(3, 1, 3)\n",
+    "plt.imshow(mask1, aspect='auto', origin='lower', cmap='gray')\n",
+    "plt.colorbar()\n",
+    "\n",
+    "plt.title(\"after iteration 1\")\n",
     "plt.show()"
    ]
   },
@@ -305,41 +355,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask2 = mask - similarity_scores\n",
-    "s = similarity_scores#[similarity_scores < 0.01] = 0\n",
-    "emb2 = emb - s * max_emb[:, None, None]\n",
+    "similarity_scores2, mask2, emb2 = iterate_filter(mask1, emb1, frame_threshold)\n",
     "\n",
-    "plt.figure(figsize=(12, 5))\n",
-    "plt.title('mask-class_max')\n",
-    "plt.imshow(mask2, aspect='auto', origin='lower', cmap='gray')\n",
-    "plt.colorbar()\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 找到 mask 中最大值的位置\n",
-    "max_position2 = np.unravel_index(np.argmax(mask2, axis=None), mask.shape)\n",
-    "# 提取对应的 emb 值 用emb比emb2更好\n",
-    "max_emb2 = emb[:, max_position2[0], max_position2[1]]\n",
-    "\n",
-    "similarity_scores2 = np.tensordot(max_emb2, emb*mask, axes=([0], [0])).reshape(emb.shape[1], emb.shape[2])\n",
-    "\n",
-    "plt.figure(figsize=(12, 10))\n",
-    "plt.subplot(2, 1, 1)\n",
+    "plt.figure(figsize=(12, 15))\n",
+    "plt.subplot(3, 1, 1)\n",
     "plt.title('class_max')\n",
     "plt.imshow(similarity_scores2, aspect='auto', origin='lower', cmap='gray')\n",
     "plt.colorbar()\n",
     "\n",
-    "plt.subplot(2, 1, 2)\n",
-    "plt.imshow(similarity_scores2 > 0.3, aspect='auto', origin='lower', cmap='gray')\n",
+    "plt.subplot(3, 1, 2)\n",
+    "plt.imshow(similarity_scores2 > frame_threshold, aspect='auto', origin='lower', cmap='gray')\n",
     "plt.colorbar()\n",
     "\n",
+    "plt.subplot(3, 1, 3)\n",
+    "plt.imshow(mask2, aspect='auto', origin='lower', cmap='gray')\n",
+    "plt.colorbar()\n",
+    "\n",
+    "plt.title(\"after iteration 2\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "similarity_scores3, mask3, emb3 = iterate_filter(mask2, emb2, frame_threshold)\n",
+    "\n",
+    "plt.figure(figsize=(12, 15))\n",
+    "plt.subplot(3, 1, 1)\n",
+    "plt.title('class_max')\n",
+    "plt.imshow(similarity_scores3, aspect='auto', origin='lower', cmap='gray')\n",
+    "plt.colorbar()\n",
+    "\n",
+    "plt.subplot(3, 1, 2)\n",
+    "plt.imshow(similarity_scores3 > frame_threshold, aspect='auto', origin='lower', cmap='gray')\n",
+    "plt.colorbar()\n",
+    "\n",
+    "plt.subplot(3, 1, 3)\n",
+    "plt.imshow(mask3, aspect='auto', origin='lower', cmap='gray')\n",
+    "plt.colorbar()\n",
+    "\n",
+    "plt.title(\"after iteration 3\")\n",
     "plt.show()"
    ]
   },
@@ -355,10 +413,10 @@
     "axs[0, 0].imshow(mask, aspect='auto', origin='lower')\n",
     "\n",
     "axs[1, 0].set_title('2. similarity to max')\n",
-    "axs[1, 0].imshow(similarity_scores, aspect='auto', origin='lower')\n",
+    "axs[1, 0].imshow(similarity_scores1, aspect='auto', origin='lower')\n",
     "\n",
     "axs[2, 0].set_title('3. note binarization')\n",
-    "axs[2, 0].imshow(similarity_scores > 0.3, aspect='auto', origin='lower')\n",
+    "axs[2, 0].imshow(similarity_scores1 > frame_threshold, aspect='auto', origin='lower')\n",
     "\n",
     "axs[0, 1].set_title('4. probability correction')\n",
     "axs[0, 1].imshow(mask2, aspect='auto', origin='lower')\n",
@@ -372,11 +430,179 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 导出为ONNX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from septimbre import SepTimbreAMT_44100, Encoder_44100\n",
+    "\n",
+    "model_44100 = SepTimbreAMT_44100(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 导出为ONNX\n",
+    "model_44100.eval()\n",
+    "\n",
+    "input_audio = torch.randn((1, 1, 22050), dtype=torch.float32)    # (fixed, fixed, dynamic)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    torch.onnx.export(\n",
+    "        model_44100,\n",
+    "        (input_audio,),\n",
+    "        'septimbre_44100.onnx',\n",
+    "        input_names = [\"audio\"],\n",
+    "        output_names = [\"onset\",\"frame\",\"embedding\"],\n",
+    "        dynamic_shapes = {\n",
+    "            'x': {2:'time'},    # same as model.forward input\n",
+    "            # auto infer output shapes\n",
+    "        },\n",
+    "        dynamo=True,\n",
+    "        verbose=False,\n",
+    "        verify=True,\n",
+    "        external_data=False,\n",
+    "        autograd_inlining=False\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 先测试FLOPS RTFX 等指标\n",
+    "Real-Time Factor(RTFX), FLOPS, actual inference time, memory peak"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "uv pip install memory_profiler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 使用onnxruntime推理\n",
+    "import onnxruntime as ort\n",
+    "import numpy as np\n",
+    "import torchaudio\n",
+    "import time\n",
+    "import psutil\n",
+    "import os\n",
+    "from memory_profiler import memory_usage\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "from utils.postprocess import cluster_notes\n",
+    "from utils.midiarray import notes2midi\n",
+    "\n",
+    "input_wave_path = \"../data/inferMusic/flute_violin.wav\"  # 5min, 44100Hz\n",
+    "N_clusters = 2\n",
+    "ort_session = ort.InferenceSession(\"septimbre_44100.onnx\") # 创建一个推理session\n",
+    "\n",
+    "# 加载音频\n",
+    "waveform, sample_rate = torchaudio.load(input_wave_path, normalize=True)\n",
+    "waveform = waveform.unsqueeze(0).cpu()\n",
+    "if waveform.shape[1] > 1:\n",
+    "    waveform = waveform.mean(1, keepdim=True)\n",
+    "waveform = waveform.numpy().astype(np.float32)\n",
+    "wave_duration = waveform.shape[2] / sample_rate\n",
+    "\n",
+    "# 监控内存\n",
+    "inference_time = 0\n",
+    "def run_onnx():\n",
+    "    global inference_time\n",
+    "    t0 = time.time()\n",
+    "    outputs = ort_session.run(None, {'audio': waveform})\n",
+    "    t1 = time.time()\n",
+    "    print(f\"inference time inside function: {t1 - t0:.3f} seconds\")\n",
+    "    onset = outputs[0][0]   # (84, time)\n",
+    "    frame = outputs[1][0]    # (84, time)\n",
+    "    emb = outputs[2][0]     # (12, 84, time)\n",
+    "    t2 = time.time()\n",
+    "    note_events = cluster_notes(\n",
+    "        frame, onset, emb, N_clusters, 24,\n",
+    "        frame_thresh=0.32,\n",
+    "        onset_thresh=0.4,\n",
+    "        neighbor_trick=False\n",
+    "    )\n",
+    "    t3 = time.time()\n",
+    "    print(f\"post-processing time inside function: {t3 - t2:.3f} seconds\")\n",
+    "    inference_time = (t1 - t0) + (t3 - t2)\n",
+    "    return note_events\n",
+    "\n",
+    "mem_usage, outputs = memory_usage((run_onnx, ), retval=True, interval=0.1)\n",
+    "\n",
+    "print(f\"inference time: {inference_time:.3f} seconds for {wave_duration:.3f} seconds audio with sampleRate {sample_rate} Hz, real-time factor: {inference_time/wave_duration:.4f}\")\n",
+    "\n",
+    "notes2midi(outputs).save(\"../test/septimbre.mid\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 专门导出encoder部分"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder_44100 = Encoder_44100(model).eval()\n",
+    "\n",
+    "input_audio = torch.randn((1, 1, 22050), dtype=torch.float32)    # (fixed, fixed, dynamic)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    torch.onnx.export(\n",
+    "        encoder_44100,\n",
+    "        (input_audio,),\n",
+    "        'septimbre_encoder_44100.onnx',\n",
+    "        input_names = [\"audio\"],\n",
+    "        output_names = [\"embedding\"],\n",
+    "        dynamic_shapes = {\n",
+    "            'x': {2:'time'},    # same as model.forward input\n",
+    "            # auto infer output shapes\n",
+    "        },\n",
+    "        dynamo=True,\n",
+    "        verbose=False,\n",
+    "        verify=True,\n",
+    "        external_data=False,\n",
+    "        autograd_inlining=False\n",
+    "    )"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "amt",
+   "display_name": "timbreamt",
    "language": "python",
    "name": "python3"
   },
@@ -390,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
