--- a/basicamt/train_basicamt2.ipynb
+++ b/basicamt/train_basicamt2.ipynb
@@ -351,7 +351,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timbreamt (3.12.12)",
+   "display_name": "timbreamt",
    "language": "python",
    "name": "python3"
   },
