--- a/basicamt/train_basicamt_musicnet.ipynb
+++ b/basicamt/train_basicamt_musicnet.ipynb
@@ -148,11 +148,10 @@
     "    virtual_batch = 0\n",
     "    for (input, target) in tqdm.tqdm(dataloader):\n",
     "        target = [x.max(dim=0)[0] for x in target]\n",
-    "        target = torch.stack(target, dim=0).to(device) # target: (batch, mix, 7 * 12, frames)\n",
+    "        target = torch.stack(target, dim=0).to(device) # target: (batch, 7 * 12, frames)\n",
     "\n",
     "        # input = input + torch.randn_like(input) * 0.001\n",
     "        input = input.to(device)    # input: (batch, channel, time)\n",
-    "        # midi_mixed: (batch, 7 * 12, 660)\n",
     "\n",
     "        onset, note = model(input)\n",
     "        # onset & note: (batch, 7 * 12, 660)\n",
@@ -346,7 +345,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timbreamt (3.12.12)",
+   "display_name": "timbreamt",
    "language": "python",
    "name": "python3"
   },
