--- a/basicamt/use_model.ipynb
+++ b/basicamt/use_model.ipynb
@@ -293,7 +293,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timbreamt (3.12.12)",
+   "display_name": "timbreamt",
    "language": "python",
    "name": "python3"
   },
