--- a/evaluate/eval_basicpitch.ipynb
+++ b/evaluate/eval_basicpitch.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# \"音色无关转录\"模型评估\n",
-    "basicpitch模型，去掉pitch分支\n",
+    "basicpitch模型，没有pitch监督\n",
     "\n",
     "## 生成转录结果并保存\n",
     "经过process后每个文件夹里的文件只有后缀不同，且后缀为\"npy\" \"wav\" \"mid\"。wav采样率已经是22050Hz。"
@@ -180,7 +180,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timbreamt (3.12.12)",
+   "display_name": "timbreamt",
    "language": "python",
    "name": "python3"
   },
