timbre-sep eval data

--- a/basicamt/use_model.ipynb
+++ b/basicamt/use_model.ipynb
@@ -289,11 +289,71 @@
     "# 二值化\n",
     "mid = create_note(\"onnx_\"+audio_name, onset, note, s_per_frame)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 测试 RTFX 等指标"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 使用onnxruntime推理\n",
+    "import onnxruntime as ort\n",
+    "import numpy as np\n",
+    "import torchaudio\n",
+    "import time\n",
+    "from memory_profiler import memory_usage\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "from utils.postprocess import output_to_notes_polyphonic\n",
+    "\n",
+    "input_wave_path = \"../data/inferMusic/flute_violin.wav\"  # 5min, 44100Hz\n",
+    "N_clusters = 2\n",
+    "ort_session = ort.InferenceSession(\"basicamt_44100.onnx\") # 创建一个推理session\n",
+    "\n",
+    "# 加载音频\n",
+    "waveform, sample_rate = torchaudio.load(input_wave_path, normalize=True)\n",
+    "waveform = waveform.unsqueeze(0).cpu()\n",
+    "if waveform.shape[1] > 1:\n",
+    "    waveform = waveform.mean(1, keepdim=True)\n",
+    "waveform = waveform.numpy().astype(np.float32)\n",
+    "wave_duration = waveform.shape[2] / sample_rate\n",
+    "\n",
+    "# 监控内存\n",
+    "inference_time = []\n",
+    "note_events = None\n",
+    "\n",
+    "def run_onnx():\n",
+    "    global inference_time\n",
+    "    global note_events\n",
+    "    t0 = time.time()\n",
+    "    outputs = ort_session.run(None, {'audio': waveform})\n",
+    "    t1 = time.time()\n",
+    "    inference_time.append(t1 - t0)\n",
+    "    onset = outputs[0][0]   # (84, time)\n",
+    "    frame = outputs[1][0]    # (84, time)\n",
+    "    t2 = time.time()\n",
+    "    note_events = output_to_notes_polyphonic(frame, onset, 0.32, 0.4)\n",
+    "    t3 = time.time()\n",
+    "    inference_time.append(t3 - t2)\n",
+    "\n",
+    "mem_interval = 0.1\n",
+    "mem_usage = memory_usage((run_onnx, ), retval=False, interval=mem_interval)\n",
+    "print(f\"max memory usage during inference: peak {max(mem_usage):.3f} MiB, increase {max(mem_usage)-mem_usage[0]:.3f} MiB\")\n",
+    "\n",
+    "print(f\"inference time: {inference_time[0]:.3f}+{inference_time[1]:.3f}={inference_time[0]+inference_time[1]:.3f} seconds for {wave_duration:.3f} seconds audio with sampleRate {sample_rate} Hz, real-time factor: {(inference_time[0]+inference_time[1])/wave_duration:.4f}\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timbreamt",
+   "display_name": "timbreamt (3.12.12)",
    "language": "python",
    "name": "python3"
   },
