--- a/septimbre/use_model.ipynb
+++ b/septimbre/use_model.ipynb
@@ -485,7 +485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 先测试FLOPS RTFX 等指标\n",
+    "### 测试 RTFX 等指标\n",
     "Real-Time Factor(RTFX), FLOPS, actual inference time, memory peak"
    ]
   },
@@ -516,12 +516,15 @@
     "import psutil\n",
     "import os\n",
     "from memory_profiler import memory_usage\n",
+    "%load_ext memory_profiler\n",
     "import sys\n",
     "sys.path.append(\"..\")\n",
     "from utils.postprocess import cluster_notes\n",
-    "from utils.midiarray import notes2midi\n",
+    "from utils.midiarray import notes2midi, midi_merge\n",
+    "from matplotlib import pyplot as plt\n",
     "\n",
     "input_wave_path = \"../data/inferMusic/flute_violin.wav\"  # 5min, 44100Hz\n",
+    "# audio from https://www.bilibili.com/video/BV138BdYLEfk/\n",
     "N_clusters = 2\n",
     "ort_session = ort.InferenceSession(\"septimbre_44100.onnx\") # 创建一个推理session\n",
     "\n",
@@ -534,13 +537,16 @@
     "wave_duration = waveform.shape[2] / sample_rate\n",
     "\n",
     "# 监控内存\n",
-    "inference_time = 0\n",
+    "inference_time = []\n",
+    "note_events = None\n",
+    "\n",
     "def run_onnx():\n",
     "    global inference_time\n",
+    "    global note_events\n",
     "    t0 = time.time()\n",
     "    outputs = ort_session.run(None, {'audio': waveform})\n",
     "    t1 = time.time()\n",
-    "    print(f\"inference time inside function: {t1 - t0:.3f} seconds\")\n",
+    "    inference_time.append(t1 - t0)\n",
     "    onset = outputs[0][0]   # (84, time)\n",
     "    frame = outputs[1][0]    # (84, time)\n",
     "    emb = outputs[2][0]     # (12, 84, time)\n",
@@ -552,15 +558,51 @@
     "        neighbor_trick=False\n",
     "    )\n",
     "    t3 = time.time()\n",
-    "    print(f\"post-processing time inside function: {t3 - t2:.3f} seconds\")\n",
-    "    inference_time = (t1 - t0) + (t3 - t2)\n",
-    "    return note_events\n",
+    "    inference_time.append(t3 - t2)\n",
     "\n",
-    "mem_usage, outputs = memory_usage((run_onnx, ), retval=True, interval=0.1)\n",
+    "# in memory_usage, SpectralClustering will die. Instead, use %memit\n",
+    "%memit run_onnx()\n",
     "\n",
-    "print(f\"inference time: {inference_time:.3f} seconds for {wave_duration:.3f} seconds audio with sampleRate {sample_rate} Hz, real-time factor: {inference_time/wave_duration:.4f}\")\n",
+    "# but the following code works on windows\n",
+    "# mem_interval = 0.1\n",
+    "# mem_usage = memory_usage((run_onnx, ), retval=False, interval=mem_interval)\n",
+    "# print(f\"max memory usage during inference: peak {max(mem_usage):.3f} MiB, increase {max(mem_usage)-mem_usage[0]:.3f} MiB\")\n",
     "\n",
-    "notes2midi(outputs).save(\"../test/septimbre.mid\")"
+    "# print(f\"inference time: {inference_time[0]:.3f}+{inference_time[1]:.3f}={inference_time[0]+inference_time[1]:.3f} seconds for {wave_duration:.3f} seconds audio with sampleRate {sample_rate} Hz, real-time factor: {(inference_time[0]+inference_time[1])/wave_duration:.4f}\")\n",
+    "\n",
+    "# midi_merge([notes2midi(track) for track in note_events]).save(\"../test/septimbre.mid\")\n",
+    "# print(\"midi saved to ../test/septimbre.mid\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "# 绘制 mem_usage 曲线并标注峰值\n",
+    "mem = np.array(mem_usage)\n",
+    "time_axis = np.arange(len(mem)) * mem_interval  # 横轴乘 mem_interval 得到具体的时间\n",
+    "\n",
+    "plt.figure(figsize=(12, 4))\n",
+    "plt.plot(time_axis, mem, '-o', markersize=4)\n",
+    "plt.title(\"Memory Usage Over Time\")\n",
+    "plt.xlabel(\"Time (s)\")\n",
+    "plt.ylabel(\"Memory (MB)\")\n",
+    "plt.grid(True)\n",
+    "\n",
+    "# 标注峰值\n",
+    "imax = int(mem.argmax())\n",
+    "plt.scatter(time_axis[imax], mem[imax], color='red', zorder=5)\n",
+    "plt.annotate(f\"peak: {mem[imax]:.1f} MB\\nTime={time_axis[imax]:.2f}s\",\n",
+    "             xy=(time_axis[imax], mem[imax]),\n",
+    "             xytext=(time_axis[imax], mem[imax] + max(50, mem.max()*0.05)),\n",
+    "             arrowprops=dict(arrowstyle=\"->\"))\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -602,7 +644,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "timbreamt",
+   "display_name": "timbreamt (3.12.12)",
    "language": "python",
    "name": "python3"
   },
